--- a/eureka-server-cp/pom.xml
+++ b/eureka-server-cp/pom.xml
@@ -3,4 +3,30 @@
   <groupId>org.batch5</groupId>
   <artifactId>eureka-server-cp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <parent>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-parent</artifactId>
+<version>3.1.0</version>
+</parent>
+<properties>
+<java.version>17</java.version>
+<spring-cloud.version>2022.0.3</spring-cloud.version>
+</properties>
+<dependencies>
+<dependency>
+<groupId>org.springframework.cloud</groupId>
+<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+</dependency>
+</dependencies>
+<dependencyManagement>
+<dependencies>
+<dependency>
+<groupId>org.springframework.cloud</groupId>
+<artifactId>spring-cloud-dependencies</artifactId>
+<version>${spring-cloud.version}</version>
+<type>pom</type>
+<scope>import</scope>
+</dependency>
+</dependencies>
+</dependencyManagement>
 </project>
