--- a/DoctorMS/src/main/resources/application.properties
+++ b/DoctorMS/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 # displaying the SQL queries running behind the scenes
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# logger location
+logging.level.root=INFO
+logging.file.path=logs/
+logging.file.name=logs/application.log
+logging.level.com.utility=DEBUG
+ 
+# Log the SQL queries in the application logs (using SLF4J)
+logging.level.org.hibernate.SQL=DEBUG
